--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "proxy-trace-access",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "description": "",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc --declaration --outDir dist",
     "prepare-deploy": "../../scripts/prepare-deploy.sh",
     "test": "jest"
   },
